--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fontsource-variable/inter": "^5.0.19",
     "@fontsource-variable/work-sans": "^5.0.19",
     "astro": "^4.12.2",
+    "astro-feather": "^1.0.0",
     "astro-google-fonts-optimizer": "^0.2.2",
     "gsap": "^3.12.5",
     "sharp": "^0.33.5",
