--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "astro-feather": "^1.0.0",
     "astro-google-fonts-optimizer": "^0.2.2",
     "gsap": "^3.12.5",
+    "hamburgers": "^1.2.1",
+    "sass": "^1.83.0",
     "sharp": "^0.33.5",
     "tailwindcss": "^3.4.7",
     "typescript": "^5.5.4"
