Added footer icons

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "astro-feather": "^1.0.0",
     "astro-google-fonts-optimizer": "^0.2.2",
     "astro-seo": "^0.8.4",
+    "feather-icons": "^4.29.2",
     "gsap": "^3.12.5",
     "hamburgers": "^1.2.1",
     "sass": "^1.83.0",
