--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "feather-icons": "^4.29.2",
     "gsap": "^3.12.5",
     "hamburgers": "^1.2.1",
+    "partytown": "^0.0.0",
     "sass": "^1.83.0",
     "sharp": "^0.33.5",
     "simple-parallax-js": "^6.0.1",
