--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "sass": "^1.83.0",
     "sharp": "^0.33.5",
     "simple-parallax-js": "^6.0.1",
+    "swiper": "^11.1.15",
     "tailwindcss": "^3.4.7",
     "typescript": "^5.5.4"
   },
