--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "typescript": "^5.5.4"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.15",
     "@xpd/tailwind-3dtransforms": "^1.0.3"
   }
 }
