Added schema to blog

--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "astro-feather": "^1.0.0",
     "astro-google-fonts-optimizer": "^0.2.2",
     "astro-seo": "^0.8.4",
+    "astro-seo-schema": "^5.0.0",
     "feather-icons": "^4.29.2",
     "gsap": "^3.12.5",
     "hamburgers": "^1.2.1",
     "partytown": "^0.0.0",
     "sass": "^1.83.0",
+    "schema-dts": "^1.1.2",
     "sharp": "^0.33.5",
     "simple-parallax-js": "^6.0.1",
     "swiper": "^11.1.15",
