--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "feather-icons": "^4.29.2",
     "gsap": "^3.12.5",
     "hamburgers": "^1.2.1",
+    "mdast-util-to-string": "^4.0.0",
     "partytown": "^0.0.0",
+    "reading-time": "^1.5.0",
     "sass": "^1.83.0",
     "schema-dts": "^1.1.2",
     "sharp": "^0.33.5",
